--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 log = "0.4"
 fern = {version = "0.6", features = ["colored"]}
 chrono = "0.4"
+toml = "0.5"
+serde = {version = "1.0", features = ["derive"]}
+serde-toml-merge = "0.3"
