--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,20 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+# Logging
 log = "0.4"
 fern = {version = "0.6", features = ["colored"]}
 chrono = "0.4"
+
+# Config
 toml = "0.5"
 serde = {version = "1.0", features = ["derive"]}
 serde-toml-merge = "0.3"
+lazy_static = "1.4" # TODO: Remove this once LazyLock is in stable
+
+# Network
+slotmap = "1.0"
+bincode = "2.0.0-rc.2"
+paste = "1.0"
+
+cargo-expand = "1.0"
