--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ lazy_static = "1.4" # TODO: Remove this once LazyLock is in stable
 slotmap = "1.0"
 bincode = "2.0.0-rc.2"
 paste = "1.0"
+crossbeam-channel = "0.5"
