--- a/config.default.toml
+++ b/config.default.toml
@@ -2,7 +2,10 @@
 
 [general]
 log_level = "info"
-max_players = 20
+
+[server]
+motd = "A Minecraft Server"
 
 [network]
 port = 25565
+max_players = 20
