--- a/config.default.toml
+++ b/config.default.toml
@@ -9,3 +9,7 @@ motd = "A Minecraft Server"
 [network]
 port = 25565
 max_players = 20
+
+[network.advanced]
+buffer_size = 1024
+buffered_packets = 32
