--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ bincode = "2.0.0-rc.2"
 paste = "1.0"
 
 tokio = {version = "1.21", features = ["full"]}
+futures = "0.3"
 
 # Server
 serde_json = "1.0"
