--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ lazy_static = "1.4" # TODO: Remove this once LazyLock is in stable
 slotmap = "1.0"
 paste = "1.0"
 
+flate2 = { version = "1.0", features = ["zlib-ng"], default-features = false }
+libz-ng-sys = { version = "1.1", default-features = false }
+
 tokio = {version = "1.21", features = ["full"]}
 futures = "0.3"
 
