Move packets! macro to a Proc-Macro

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,15 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = [
+    "proc_macros",
+]
 
 [dependencies]
+# Crates
+snap_rs_proc_macros = { path = "proc_macros" }
+
 # Logging
 log = "0.4"
 fern = {version = "0.6", features = ["colored"]}
